post LEGA - SID2, 4/20, 23

--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/7/19"
+    "# JUICE RPWI HF HK: QL -- 2024/8/26"
    ]
   },
   {
@@ -14,20 +14,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import datetime\n",
-    "\n",
-    "print(np.__version__)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CDF and Directory setting: set by User"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import sys"
    ]
   },
   {
@@ -37,16 +27,20 @@
    "outputs": [],
    "source": [
     "# The latest CDF library https://spdf.gsfc.nasa.gov/pub/software/cdf/dist/latest/\n",
-    "# from spacepy import pycdf\n",
-    "\n",
     "import os\n",
     "os.environ[\"CDF_LIB\"] = \"/Applications/cdf/cdf39_1-dist/lib\"\n",
     "\n",
-    "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib as juice_cdf\n",
-    "# import juice_math_lib as juice_math\n",
     "import juice_hk_lib as juice_hk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dump_mode = 1"
    ]
   },
   {
@@ -111,7 +105,12 @@
     "# date='20240126'\n",
     "# date='20240701'\n",
     "# date='20240702'\n",
-    "date='20240706'\n",
+    "# date='20240706'\n",
+    "date='20240819'\n",
+    "# date='20240820'\n",
+    "# date='20240821'\n",
+    "# date='20240822'\n",
+    "# date='20240823'\n",
     "\n",
     "# Ground\n",
     "# date='HK'           # linked to /Users/user/0-python/JUICE_data/HK/HK/"
@@ -267,143 +266,59 @@
    "outputs": [],
    "source": [
     "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
-    "fig, (ax1, ax2, ax3, ax4, ax5) = plt.subplots(\n",
-    "    5, figsize=(10.0, 12.0), sharex=True)\n",
+    "fig, (ax1, ax2, ax3, ax4) = plt.subplots(4, figsize=(14, 11), sharex=True)\n",
     "\n",
-    "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    # ax1.plot(hk_hf.epoch, temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga_rev, '.b', markersize=5, linewidth=0.5, label='HF(FPGA) rev')\n",
+    "    ax1.plot(hk_hf.epoch,  temp_hf_fpga_rev,  '.r', markersize=5, linewidth=0.5, label='HF(FPGA) rev')\n",
     "    #ax1.plot(hk_hf.epoch, temp_hf_fpga_rev2, '.y', linewidth=0.5, label='HF(FPGA) rev2')\n",
     "if err_dpu == 0:\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp, '.r', markersize=1, label='LVPS(PCB)')\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.y', markersize=5, label='HF(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp,    '.k', markersize=5, label='HF(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.lvps_temp,  '--b', markersize=1, label='LVPS(PCB)')\n",
     "    # ax1.plot(hk_dpu.epoch, hk_dpu.dpu_temp, '.k', markersize=1, label='DPU(PCB)')\n",
-    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp, '.b', markersize=1, label='LP(PCB)')\n",
-    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp, '.g', markersize=1, label='LF(PCB)')\n",
-    "ax1.set_ylabel('HF Temperature [degC]');  ax1.legend();  ax1.set_title(title_label)\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lp_temp,  '.b', markersize=1, label='LP(PCB)')\n",
+    "    # ax1.plot(hk_dpu.epoch, hk_dpu.lf_temp,  '.g', markersize=1, label='LF(PCB)')\n",
+    "ax1.set_ylabel('HF T [degC]');  ax1.legend();  ax1.set_title(title_label)\n",
     "\n",
-    "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    # ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.c', markersize=6, linewidth=0.5, label='RWI CH1')\n",
     "    # ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.y', markersize=6, linewidth=0.5, label='RWI CH2')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev, '.b', markersize=5, label='RWI CH1 rev')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev, '.r', markersize=5, label='RWI CH2 rev')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev,  '.g', markersize=5, label='RWI CH1 rev')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev,  '.r', markersize=5, label='RWI CH2 rev')\n",
     "    #ax2.plot(hk_hf.epoch, temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
     "    #ax2.plot(hk_hf.epoch, temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
     "if err_dpu == 0:\n",
-    "    ax2.plot(hk_dpu.epoch, hk_dpu.scm_temp, '.k', markersize=1, label='SCM')\n",
-    "ax2.set_ylabel('RWI Temperature [degC]');  ax2.legend()\n",
+    "    ax2.plot(hk_dpu.epoch, hk_dpu.scm_temp,  '.b', markersize=1, label='SCM')\n",
+    "ax2.set_ylabel('RWI T [degC]');  ax2.legend()\n",
     "\n",
-    "#-----------------------------------------------------------------\n",
     "if err_lvps == 0:\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_85, '.g', markersize=1, label='HF 8.5V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/off (LVPS)')\n",
-    "    ax3.plot(hk_hf.epoch, hk_hf.v1_8+5, '.b', markersize=3, label='HF 1.8V off/ON (HF)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_85,    '.g', markersize=3, label='RWI 8.5V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_33,    '.k', markersize=3, label='HF  3.3V  (LVPS)')\n",
     "    #\n",
-    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
-    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_85*10, '.g', markersize=1, label='HF 8.5V (LVPS) [x10]')\n",
-    "ax3.set_ylabel('Voltage [V]');  ax3.legend()\n",
-    "ax4.set_ylabel('Current [A]');  ax4.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off,    '-k', markersize=3, label='HF ON/off (LVPS)')\n",
+    "    ax3.plot(hk_hf.epoch,   hk_hf.v1_8+.1,        '-r', markersize=3, label='HF 1.8V off/ON (HF)')\n",
+    "    #\n",
+    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_85*10, '.g', markersize=3, label='RWI 8.5V (LVPS) [x10]')\n",
+    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_33,    '.k', markersize=3, label='HF  3.3V (LVPS)')\n",
     "if err_hf == 0:\n",
-    "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', markersize=1, label='Heater ENA')\n",
-    "    # ax5.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
+    "    ax3.plot(hk_hf.epoch,   hk_hf.heater_ena,     '-y', markersize=3, label='RWI Heater ENA')\n",
+    "    # ax3.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
     "    if err_hf2 != 0:\n",
-    "        ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
-    "ax5.set_ylabel('HF status');  ax5.legend();  ax5.set_xlabel('UT')\n",
+    "        ax3.plot(hk_hf.epoch, hk_hf.calsig_ena+.3, '--y', label='Cal signal ENA')\n",
+    "ax3.set_ylabel('Voltage [V]');  ax3.legend()\n",
+    "ax4.set_ylabel('Current [A]');  ax4.legend();  ax4.set_xlabel('UT')\n",
     "\n",
     "\"\"\"\n",
     "print(hk_hf.epoch)\n",
     "E_min = '2024-01-25 11:00:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
     "E_max = '2024-01-25 12:10:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "xlim=[t_min, t_max]\n",
-    "ax1.set_xlim(xlim)\n",
+    "xlim=[t_min, t_max]; ax1.set_xlim(xlim)\n",
     "\"\"\"\n",
     "#-----------------------------------------------------------------\n",
-    "png_fname = work_dir+'JUICE_RPWI_HF_HK_'+date+'.png'\n",
-    "fig.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "title_label = 'JUICE/RPWI HF HK ' + date[0:4] + '-' + date[4:6] + '-' + date[6:8]\n",
-    "fig, (ax1, ax2, ax3, ax4, ax5, ax6) = plt.subplots(\n",
-    "    6, figsize=(10.0, 12.0), sharex=True)\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_hf == 0:\n",
-    "    # ax1.plot(temp_hf_fpga, '.c', markersize=6, linewidth=0.5, label='HF(FPGA)')\n",
-    "    ax1.plot(temp_hf_fpga_rev, '.b', markersize=5, linewidth=0.5, label='HF(FPGA) rev')\n",
-    "    # ax1.plot(temp_hf_fpga_rev2, '.y', label='HF(FPGA) rev2')\n",
-    "if err_dpu == 0:\n",
-    "    ax1.plot(hk_dpu.lvps_temp, '.k', markersize=1, label='LVPS(PCB)')\n",
-    "    ax1.plot(hk_dpu.hf_temp, '.y', markersize=5, label='HF(PCB)')\n",
-    "    #ax1.plot(hk_dpu.dpu_temp, '.y', markersize=1, label='DPU(PCB)')\n",
-    "    #ax1.plot(hk_dpu.lp_temp, '.r', markersize=1, label='LP(PCB)')\n",
-    "    #ax1.plot(hk_dpu.lf_temp, '.g', markersize=1, label='LF(PCB)')\n",
-    "ax1.set_ylabel('HF Temperature [degC]');  ax1.legend();  ax1.set_title(title_label)\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_hf == 0:\n",
-    "    # ax2.plot(temp_rwi_ch1, '.c', markersize=3, linewidth=0.5, label='RWI CH1')\n",
-    "    # ax2.plot(temp_rwi_ch2, '.y', markersize=3, linewidth=0.5, label='RWI CH2')\n",
-    "    ax2.plot(temp_rwi_ch1_rev, '.b', markersize=5, label='RWI CH1 rev')\n",
-    "    ax2.plot(temp_rwi_ch2_rev, '.r', markersize=5, label='RWI CH2 rev')\n",
-    "    # ax2.plot(temp_rwi_ch1_rev2, '-g', linewidth=0.5, label='RWI CH1 rev2')\n",
-    "    # ax2.plot(temp_rwi_ch2_rev2, '-b', linewidth=0.5, label='RWI CH2 rev2')\n",
-    "if err_dpu == 0:\n",
-    "    ax2.plot(hk_dpu.scm_temp, '.k', markersize=1, label='SCM')\n",
-    "ax2.set_ylabel('RWI Temperature [degC]');  ax2.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_lvps == 0:\n",
-    "    ax3.plot(hk_lvps.vol_hf_85, '.g', markersize=1, label='HF 8.5V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.vol_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.hf_on_off, '.k', markersize=1, label='HF ON/off (LVPS)')\n",
-    "    ax3.plot(hk_hf.v1_8+5, '.b', markersize=3, label='HF 1.8V off/ON (HF)')\n",
-    "    #\n",
-    "    ax4.plot(hk_lvps.cur_hf_33, '.r', markersize=1, label='HF 3.3V (LVPS)')\n",
-    "    ax4.plot(hk_lvps.cur_hf_85*10, '.g', markersize=1, label='HF 8.5V (LVPS) [x10]')\n",
-    "ax3.set_ylabel('Voltage [V]');  ax3.legend()\n",
-    "ax4.set_ylabel('Current [A]');  ax4.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_hf == 0:\n",
-    "    ax5.plot(hk_hf.heater_ena, '.r', markersize=1, label='Heater ENA')\n",
-    "    # ax5.plot(hk_hf.pol + 0.2, '.g', markersize=1, label='Pol Master/Slave')\n",
-    "    if err_hf2 != 0:\n",
-    "        ax5.plot(hk_hf.calsig_ena+0.1, '.b', markersize=1, label='Cal signal ENA')\n",
-    "ax5.set_ylabel('HF status');  ax5.legend()\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "if err_hf == 0:\n",
-    "    ax6.plot(hk_hf.epoch, '.k', label='HF');  \n",
-    "if err_dpu == 0:\n",
-    "    ax6.plot(hk_dpu.epoch, '.g', label='DPU');  \n",
-    "if err_lvps == 0:\n",
-    "    ax6.plot(hk_lvps.epoch, '.b', label='LVPS')\n",
-    "ax6.set_ylabel('Epoch');  ax6.legend()\n",
-    "\n",
-    "# range: X-axis\n",
-    "\"\"\"\n",
-    "i0=0;  i1=1000\n",
-    "xlim=[i0, i1];  print(xlim)\n",
-    "xlim=[i0, i1];  print(xlim)\n",
-    "ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim);  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
-    "print(temp_hf_fpga_raw[i1], temp_hf_fpga_rev[i1], temp_hf_fpga_rev2[i1], temp_hf_fpga[i1], )\n",
-    "print(temp_rwi_ch1_raw[i1], temp_rwi_ch2_raw[i1], temp_rwi_ch1_rev[i1], temp_rwi_ch2_rev[i1], temp_rwi_ch1_rev2[i1], temp_rwi_ch2_rev2[i1], temp_rwi_ch1[i1], temp_rwi_ch2[i1],)\n",
-    "\"\"\"\n",
-    "\n",
-    "#-----------------------------------------------------------------\n",
-    "png_fname = work_dir+'JUICE_RPWI_HF_HK_'+date+'.png'\n",
-    "# fig.savefig(png_fname)"
+    "fig.subplots_adjust(hspace=0)\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+'JUICE_RPWI_HF_HK_'+date+'.png'\n",
+    "    fig.savefig(png_fname)"
    ]
   }
  ],
