--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/8/18"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/8/26"
    ]
   },
   {
@@ -122,6 +122,11 @@
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',     # 128   CAL\n",
+    "                 ]\n",
+    "# 202408\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/22/'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240822T023129_V01.cdf',     # 128   CAL\n",
+    "                  'JUICE_L1a_RPWI-HF-SID2_20240822T023715_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
