--- a/JUICE-Orbit.ipynb
+++ b/JUICE-Orbit.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE ORBIT QL -- 2024/2/21"
+    "# JUICE ORBIT QL -- 2024/8/21"
    ]
   },
   {
@@ -13,20 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import spiceypy as spice\n",
-    "from astropy.constants import au\n",
+    "import numpy as np\n",
+    "import sys\n",
     "from matplotlib import patches\n",
-    "from datetime import datetime\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SPICE test"
+    "from datetime import datetime"
    ]
   },
   {
@@ -35,14 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from astropy.constants import au\n",
+    "import spiceypy as spice\n",
     "spice.tkvrsn(\"TOOLKIT\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import JUICE Lib"
    ]
   },
   {
@@ -52,7 +38,6 @@
    "outputs": [],
    "source": [
     "sys.path.append(\"./lib/\")\n",
-    "# Load SPICE kernels\n",
     "import juice_spice_lib as juice_spice"
    ]
   },
@@ -60,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### load SPICE ketnels"
+    "### load SPICE kernels"
    ]
   },
   {
@@ -91,7 +76,7 @@
    "outputs": [],
    "source": [
     "# set date/time\n",
-    "utctim = \"2024-08-15T00:00:00\"      # start date/time\n",
+    "utctim = \"2024-08-19T00:00:00\"      # start date/time\n",
     "l_date = 10                         # date\n",
     "dt = 60                             # time step [second]\n",
     "nd = l_date * 3600 * 24 / dt        # number of data\n",
