--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/8/18"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/8/26"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "# *** CAL ***\n",
     "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "cal_mode  = 1                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
@@ -120,6 +120,11 @@
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',     # 128   CAL\n",
+    "                 ]\n",
+    "# 202408\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/08/22/'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240822T023129_V01.cdf',     # 128   CAL\n",
+    "                  'JUICE_L1a_RPWI-HF-SID2_20240822T023715_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
@@ -221,6 +226,20 @@
     "print(\"Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")\n",
     "print(\"Frequency, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
     "print(\"Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21460fc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.B0_startf\n",
+    "data.B0_stopf\n",
+    "#data.B0_step\n",
+    "#data.B0_repeat\n",
+    "#data.B0_subdiv"
    ]
   },
   {
@@ -419,7 +438,8 @@
     "\n",
     "Epoch_1d  = spec.epoch.tolist();    n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
     "freq_1d   = spec.freq[n_time1//2];  n_freq0 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
-    "freq_w_1d = spec.freq_w[n_time1//2]"
+    "freq_w_1d = spec.freq_w[n_time1//2]\n",
+    "print(f_min0, f_max0)"
    ]
   },
   {
