post LEGA#2: SID-3 and others --- still in debug

--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/7/20"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2024/9/1"
    ]
   },
   {
@@ -378,22 +378,15 @@
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "    ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
     "\n",
-    "# range: X-axis\n",
-    "\"\"\"\n",
-    "xlim=[0, N_frequency*1-1]\n",
-    "xlim=[50, 60]\n",
-    "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
-    "\"\"\"\n",
-    "# range: Y-axis\n",
-    "ylim=[10**p_min, 10**p_max]\n",
-    "ax1.set_ylim(ylim)\n",
+    "xlim=[-.5, len(np.ravel(data.EuEu)) -.5]; print(xlim); ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.epoch))-.5]; print(xlim); ax8.set_xlim(xlim)\n",
+    "ylim=[10**p_min, 10**p_max];  ax1.set_ylim(ylim)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ylim=[-10**p_max, 10**p_max]; ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
     "    ylim=[-1.05, 1.05]; ax5.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax6.set_ylim(ylim)\n",
-    "ylim=[f_min0, f_max0]\n",
-    "ax7.set_ylim(ylim)\n",
+    "ylim=[f_min0, f_max0];  ax7.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
