--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/8/19"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/9/1"
    ]
   },
   {
@@ -254,14 +254,10 @@
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "\"\"\"\n",
-    "# range: X-axis\n",
-    "xlim=[0, N_frequency-1]\n",
-    "ax1.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
-    "ylim=[10**p_min0, 10**p_max0]\n",
-    "ax1.set_ylim(ylim)\n",
-    "\"\"\"\n",
+    "xlim=[-.5, len(np.ravel(data.auto_corr))     -.5];  print(xlim);  ax1.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.freq_auto_corr))-.5];  print(xlim);  ax2.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.epoch))         -.5];  print(xlim);  ax3.set_xlim(xlim)\n",
+    "# ylim=[10**p_min0, 10**p_max0];  ax1.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
