--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/8/27"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/9/1"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bca50671",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6c181f65",
    "metadata": {},
    "outputs": [],
@@ -81,8 +81,8 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL set ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]   0: background   1: CAL     2: all\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -102,9 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RIME_mode = 1                           # [RIME rejection]  0: n/a  1: RIME reject\n",
-    "RFI_mode  = 1                           # [RFI  rejection]  0: n/a  1: 200kHz reject\n",
-    "f_min = 100;  f_max = 500            # [Frequency sel]   max - min"
+    "RIME_mode = 0                           # [RIME rejection]  0: n/a  1: RIME reject\n",
+    "RFI_mode  = 0                           # [RFI  rejection]  0: n/a  1: 200kHz reject\n",
+    "f_min     = 0                           # [Frequency sel]   max - min\n",
+    "f_max     = 50000                       # [Frequency sel]   max - min"
    ]
   },
   {
@@ -148,13 +149,13 @@
    "outputs": [],
    "source": [
     "# *** Ground Test - Ver.2 ***\n",
-    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name_list = ['SID23_20231024-0011.cdf',\n",
-    "                  'SID23_20231024-0024.cdf',\n",
-    "                  'SID23_20231024-0034.cdf',\n",
+    "data_name_list = [#'SID23_20231024-0011.cdf',\n",
+    "                  'SID23_20231024-0024.cdf',    # 0/0/10mVpp \n",
+    "                  'SID23_20231024-0034.cdf',    # 0/0/10mVpp\n",
     "                 ]\n",
+    "\"\"\"\n",
     "# 202311 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID23_Seq07.cdf',\n",
@@ -499,10 +500,8 @@
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "xlim=[0, len(np.ravel(data.Eu_i[:][:]))];  print(xlim)\n",
-    "ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
-    "xlim=[0, len(np.ravel(data.epoch[:]))];    print(xlim)\n",
-    "ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.Eu_i)) -.5];  print(xlim);  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.epoch))-.5];  print(xlim);  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
     "\"\"\"\n",
     "# range: Y-axis\n",
     "ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]\n",
@@ -548,15 +547,17 @@
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S');  ax4.set_xlabel(date)\n",
     "\n",
-    "xlim=[0, n_block*data.N_feed[0]*128]\n",
-    "ax1.set_xlim(xlim);  ax3.set_xlim(xlim);  ax2.set_xlim(xlim)\n",
+    "xlim=[-0.5, n_block*data.N_feed[0]*128                   -.5];  print(xlim);  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)\n",
+    "xlim=[-0.5, len(np.ravel(data.time[n_sweep][0:n_block])) -.5];  print(xlim);  ax4.set_xlim(xlim)\n",
     "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]\n",
     "# ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0);  fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw-sweep.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "print(len(np.ravel(data.time[n_sweep][0:n_block])))"
    ]
   },
   {
@@ -573,32 +574,27 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_block = 1\n",
+    "n_block = 2\n",
     "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 2);  ax3 = fig.add_subplot(3, 1, 3)\n",
     "\n",
-    "ax1.plot(np.ravel(data.time[n_sweep][0:n_block]), np.ravel(wave.Eu_i[n_sweep][0:n_block]), '-b', linewidth=.5, label='Eu_i'); \n",
-    "ax1.plot(np.ravel(data.time[n_sweep][0:n_block]), np.ravel(wave.Eu_q[n_sweep][0:n_block]), '-r', linewidth=.5, label='Eu_q')\n",
-    "ax2.plot(np.ravel(data.time[n_sweep][0:n_block]), np.ravel(wave.Ev_i[n_sweep][0:n_block]), '-b', linewidth=.5, label='Ev_i'); \n",
-    "ax2.plot(np.ravel(data.time[n_sweep][0:n_block]), np.ravel(wave.Ev_q[n_sweep][0:n_block]), '-r', linewidth=.5, label='Ev_q')\n",
-    "ax3.plot(np.ravel(data.time[n_sweep][0:n_block]), np.ravel(wave.Ew_i[n_sweep][0:n_block]), '-b', linewidth=.5, label='Ew_i'); \n",
-    "ax3.plot(np.ravel(data.time[n_sweep][0:n_block]), np.ravel(wave.Ew_q[n_sweep][0:n_block]), '-r', linewidth=.5, label='Ew_q')\n",
+    "ax1.plot(data.time[n_sweep][n_block], wave.Eu_i[n_sweep][n_block], '-b', linewidth=.5, label='Eu_i'); \n",
+    "ax1.plot(data.time[n_sweep][n_block], wave.Eu_q[n_sweep][n_block], '-r', linewidth=.5, label='Eu_q')\n",
+    "ax2.plot(data.time[n_sweep][n_block], wave.Ev_i[n_sweep][n_block], '-b', linewidth=.5, label='Ev_i'); \n",
+    "ax2.plot(data.time[n_sweep][n_block], wave.Ev_q[n_sweep][n_block], '-r', linewidth=.5, label='Ev_q')\n",
+    "ax3.plot(data.time[n_sweep][n_block], wave.Ew_i[n_sweep][n_block], '-b', linewidth=.5, label='Ew_i'); \n",
+    "ax3.plot(data.time[n_sweep][n_block], wave.Ew_q[n_sweep][n_block], '-r', linewidth=.5, label='Ew_q')\n",
     "ax1.set_ylabel('Eu '+wave.str);  ax2.set_ylabel('Ev '+wave.str);  ax3.set_ylabel('Ew '+wave.str)\n",
     "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8)\n",
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax3.set_xlabel(date)\n",
     "\n",
-    "# range: X-axis\n",
-    "\"\"\"\n",
+    "xlim=[data.time[n_sweep][n_block][0], data.time[n_sweep][n_block][-1]];  print(xlim);  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)\n",
     "# xlim=[0.00159, 0.00187]   # 0.28msec\n",
-    "xlim=[334, 415]             # 81 * 3.37837832e-06 = 0.28msec\n",
-    "ax1.set_xlim(xlim);  ax3.set_xlim(xlim);  ax5.set_xlim(xlim);  ax7.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
-    "ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]\n",
-    "ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
-    "\"\"\"\n",
+    "# xlim=[334, 415]             # 81 * 3.37837832e-06 = 0.28msec\n",
+    "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)];  ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0);  fig.show\n",
     "if dump_mode == 1:\n",
@@ -613,25 +609,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = np.int16(3*n_time0//5+3)\n",
-    "n_block = 1\n",
+    "n_sweep = np.int16(n_time0//2)\n",
+    "n_block = 2\n",
     "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
     "\n",
     "wave.EE = wave.Eu_i*wave.Eu_i + wave.Eu_q*wave.Eu_q + wave.Ev_i*wave.Ev_i + wave.Ev_q*wave.Ev_q + wave.Ew_i*wave.Ew_i + wave.Ew_q*wave.Ew_q\n",
-    "ax1.plot(np.ravel(data.time[n_sweep][0:n_block]), np.ravel(wave.EE[n_sweep][0:n_block]), '-b', linewidth=.5, label='EE')\n",
+    "ax1.plot(data.time[n_sweep][n_block], wave.EE[n_sweep][n_block], '-b', linewidth=.5, label='EE')\n",
     "ax1.set_ylabel('EE '+wave.str)\n",
     "title_label = '[JUICE/RPWI HF PSSR3-Rich (SID-23)]  ' + data_name + \"  [\" + date1 + \"]\";  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "ax1.set_yscale('log')\n",
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax1.set_xlabel(date)\n",
     "\n",
+    "xlim=[data.time[n_sweep][n_block][0], data.time[n_sweep][n_block][-1]];  print(xlim);  ax1.set_xlim(xlim)\n",
     "# xlim=[0.00159, 0.00187]   # 0.28msec\n",
-    "# xlim=[334, 415]             # 81 * 3.37837832e-06 = 0.28msec\n",
-    "# ax1.set_xlim(xlim);  ax3.set_xlim(xlim);  ax5.set_xlim(xlim);  ax7.set_xlim(xlim)\n",
-    "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]\n",
-    "# ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
+    "# xlim=[334, 415]           # 81 * 3.37837832e-06 = 0.28msec\n",
+    "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]; ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
     "\n",
     "fig.subplots_adjust(hspace=0);  fig.show\n",
     "if dump_mode == 1:\n",
