--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/7/21"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/9/1"
    ]
   },
   {
@@ -112,7 +112,6 @@
     "                  'SID05_20231117-1603.cdf',\n",
     "                  'SID05_20231117-1611.cdf',\n",
     "                 ]\n",
-    "\n",
     "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
@@ -323,17 +322,10 @@
     "ax1.set_title(title_label);  \n",
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8);  ax4.legend(loc='upper right', fontsize=8); \n",
     "\n",
-    "\"\"\"\n",
-    "# range: X-axis\n",
-    "xlim=[0, N_frequency]\n",
-    "ax1.set_xlim(xlim)\n",
-    "ax2.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
-    "ylim=[10**p_raw_min, 10**p_raw_max]\n",
-    "ax1.set_ylim(ylim)\n",
-    "\"\"\"\n",
-    "ylim=[f_min0, f_max0]\n",
-    "ax2.set_ylim(ylim)\n",
+    "xlim=[-.5, len(np.ravel(data.EE)) -.5];   print(xlim); ax1.set_xlim(xlim); ax2.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.epoch))-.5]; print(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim)\n",
+    "# ylim=[10**p_raw_min, 10**p_raw_max]; ax1.set_ylim(ylim)\n",
+    "ylim=[f_min0, f_max0];                 ax2.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
