--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/8/18"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/9/1"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(14, 11))\n",
-    "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 3);  ax3 = fig.add_subplot(3, 1, 2)\n",
+    "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 2);  ax3 = fig.add_subplot(3, 1, 3)\n",
     "\n",
     "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5, label='auto_corr')\n",
     "ax2.plot(np.ravel(data.epoch[:]), '.')\n",
@@ -255,14 +255,9 @@
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "\n",
-    "\"\"\"\n",
-    "# range: X-axis\n",
-    "xlim=[0, N_frequency-1]\n",
-    "ax1.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
-    "ylim=[10**p_min0, 10**p_max0]\n",
-    "ax1.set_ylim(ylim)\n",
-    "\"\"\"\n",
+    "xlim=[-.5, len(np.ravel(data.auto_corr))     -.5];  print(xlim);  ax1.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.epoch))         -.5];  print(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)\n",
+    "# ylim=[10**p_min0, 10**p_max0];  ax1.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
