--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/8/18"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/9/1"
    ]
   },
   {
@@ -269,14 +269,10 @@
     "#\n",
     "title_label = '[JUICE/RPWI HF PSSR3-Surv (SID-7)]  ' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
-    "\"\"\"\n",
-    "# range: X-axis\n",
-    "xlim=[n_length0 * 0, n_length0 * 3 - 1]\n",
-    "ax1.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
-    "# ylim=[10**p_raw_min, 10**p_raw_max]\n",
-    "# ax1.set_ylim(ylim)\n",
-    "\"\"\"\n",
+    "\n",
+    "xlim=[-.5, len(np.ravel(data.auto_corr)) -.5]; print(xlim); ax1.set_xlim(xlim)\n",
+    "xlim=[-.5, len(np.ravel(data.epoch))     -.5]; print(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
+    "# ylim=[10**p_raw_min, 10**p_raw_max];  ax1.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
