--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/8/26"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/9/1"
    ]
   },
   {
@@ -229,20 +229,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21460fc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.B0_startf\n",
-    "data.B0_stopf\n",
-    "#data.B0_step\n",
-    "#data.B0_repeat\n",
-    "#data.B0_subdiv"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "45d276a6",
    "metadata": {},
@@ -310,10 +296,8 @@
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# range: X-axis\n",
-    "xlim=[0, len(np.ravel(data.Eu_i[:][:]))];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
-    "xlim=[-0.5, n_time0-0.5];                  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
+    "xlim=[-0.5, len(np.ravel(data.Eu_i[:][:])) -0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
+    "xlim=[-0.5, n_time0                        -0.5];                  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
     "p_max = np.ceil(np.log10(np.amax([np.amax(wave.Eu_i), np.amax(wave.Eu_q), np.amax(wave.Ev_i), np.amax(wave.Ev_q), np.amax(wave.Ew_i), np.amax(wave.Ew_q)]))*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)];  ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "ylim=[f_min1, f_max1];             ax4.set_ylim(ylim)\n",
@@ -360,8 +344,8 @@
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
-    "xlim=[0, len(np.ravel(data.Eu_i[n_sweep0:n_sweep1]))];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
-    "xlim=[-0.5, num_sweep-0.5];                             ax5.set_xlim(xlim)\n",
+    "xlim=[-0.5, len(np.ravel(data.Eu_i[n_sweep0:n_sweep1]))-0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
+    "xlim=[-0.5, num_sweep                                  -0.5];  ax5.set_xlim(xlim)\n",
     "# range: Y-axis\n",
     "p_max = np.ceil(np.log10( np.amax( [np.amax(wave.Eu_i[n_sweep0:n_sweep1]), np.amax(wave.Eu_q[n_sweep0:n_sweep1]), np.amax(wave.Ev_i[n_sweep0:n_sweep1]), np.amax(wave.Ev_q[n_sweep0:n_sweep1]), np.amax(wave.Ew_i[n_sweep0:n_sweep1]), np.amax(wave.Ew_q[n_sweep0:n_sweep1])] ) )*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
@@ -405,9 +389,7 @@
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# range: X-axis\n",
-    "xlim=[0, len(np.ravel(data.Eu_i[n_sweep][n_step0:n_step1]))];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
+    "xlim=[-0.5, len(np.ravel(data.Eu_i[n_sweep][n_step0:n_step1]))-0.5];  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
     "p_max = np.ceil(np.log10( np.amax( [np.amax(wave.Eu_i[n_sweep][n_step0:n_step1]), np.amax(wave.Eu_q[n_sweep][n_step0:n_step1]), np.amax(wave.Ev_i[n_sweep][n_step0:n_step1]), np.amax(wave.Ev_q[n_sweep][n_step0:n_step1]), np.amax(wave.Ew_i[n_sweep][n_step0:n_step1]), np.amax(wave.Ew_q[n_sweep][n_step0:n_step1])] ) )*5)/5\n",
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "\n",
